[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twscrape"
version = "0.7.0"
authors = [{name = "vladkens", email = "v.pronsky@gmail.com"}]
description = "Twitter GraphQL and Search API implementation with SNScrape data models"
readme = "readme.md"
requires-python = ">=3.10"
keywords = ["twitter", "scrape", "scrapper", "api", "snscrape"]
license = {text = "MIT"}
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]
dependencies = [
  "aiosqlite==0.17.0",
  "fake-useragent==1.1.3",
  "httpx==0.24.0",
  "loguru==0.7.0",
]

[project.optional-dependencies]
dev = [
  "pylint==2.17.3",
  "pytest-asyncio==0.21.0",
  "pytest-cov==4.0.0",
  "pytest-httpx==0.22.0",
  "pytest==7.3.1",
  "ruff==0.0.263",
]

[project.urls]
repository = "https://github.com/vladkens/twscrape"

[project.scripts]
twscrape = "twscrape.cli:run"

[tool.setuptools]
packages = ['twscrape']

[tool.pylint]
max-line-length = 99
disable = [
    "C0103", # invalid-name
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "W0105", # pointless-string-statement
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
